GNOME Bugzilla – Bug 731116
afp copy method does not report progress
Last modified: 2014-06-04 06:23:17 UTC
g_file_copy is supposed to report progress, at least the number of bytes copied at the end. The afp server side copy method does not do this, which means when copying a bunch of files with Nautilus, the progress bar does not move.
Created attachment 277742 [details] [review] afp: Report number of bytes copied Report the number of bytes copied at the end since this is required by the g_file_copy API. This doesn't add any overhead either since we're already stat()ing the source file.
Review of attachment 277742 [details] [review]: Looks great. Please commit.
Pushed to master as dd14287. Thanks for the quick review.