afp: Report number of bytes copied

Report the number of bytes copied at the end since this is required by
the g_file_copy API.  This doesn't add any overhead either since we're
already stat()ing the source file.

https://bugzilla.gnome.org/show_bug.cgi?id=731116